--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -57,6 +57,11 @@ mod.chiselsandbits.positivepatternmode.additive=Additive
 mod.chiselsandbits.positivepatternmode.placement=Placement
 mod.chiselsandbits.positivepatternmode.impose=Impose
 
+mod.chiselsandbits.wrench.nudge_bit=Nudge Bit
+mod.chiselsandbits.wrench.nudge_block=Nudge Block
+mod.chiselsandbits.wrench.rotate_block=Rotate Block
+mod.chiselsandbits.wrenge.nudge_block_disabled=You can only use this mode to nudge blueprints.
+
 mod.chiselsandbits.tapemeasure.chatmsg=x: %s,  y: %s,  z: %s
 mod.chiselsandbits.tapemeasure.bit=Bit
 mod.chiselsandbits.tapemeasure.block=Block
@@ -241,4 +246,5 @@ mod.chiselsandbits.config.enableSetBitCommand=Enable /setbit Command
 mod.chiselsandbits.config.maxMillisecondsPerBlock=Max Milliseconds Per Block
 mod.chiselsandbits.config.maxMillisecondsUploadingPerFrame=Max Milliseconds Uploading/Cycle
 mod.chiselsandbits.config.maxTapeMeasures=Max Tape Measures
+mod.chiselsandbits.config.blueprintHosts=Hosts that C&B can download blueprints from, add "http://" and "https://" for any, not recommended.
 mod.chiselsandbits.config.displayMeasuringTapeInChat=Display Measuring Tape In Chat
