VBO Setting. New Setting Localization and Tooltips. Invalidate VBOs + DLists when re-stiching. Improve TESR Cleanup. Added VBO / DispList mode to F3 Overlay. TileLists are now Weak, allowing orphaned TESRs to be cleaned up by GC, i'm not sure whats causing the orphaning.. but this at least cleans it up, eventually.

--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -228,3 +228,9 @@ mod.chiselsandbits.config.maxMillisecondsPerBlock=Max Milliseconds Per Block
 mod.chiselsandbits.config.maxMillisecondsUploadingPerFrame=Max Milliseconds Uploading/Cycle
 mod.chiselsandbits.config.maxTapeMeasures=Max Tape Measures
 mod.chiselsandbits.config.displayMeasuringTapeInChat=Display Measuring Tape In Chat
+mod.chiselsandbits.config.defaultToDynamicRenderer=Default To Dynamic Renderer
+mod.chiselsandbits.config.forceDynamicRenderer=Disable Static Renderer
+mod.chiselsandbits.config.useVBO=Use VBOs
+mod.chiselsandbits.config.defaultToDynamicRenderer.tooltip=By default C&B uses the static renderer, and changes to the Dynamic Renderer on update, This setting reverse that; After determining the detail of the model it will decide to revert to the static renderer, helpful for more complicated scenes that cause stalls when using the static renderer.
+mod.chiselsandbits.config.forceDynamicRenderer.tooltip=Debug Setting, that disable the static render entirely.
+mod.chiselsandbits.config.useVBO.tooltip=By Default uses the same setting as MC, but can be overridden.
