Replacement Option + Material Modes.

--- a/src/main/resources/assets/chiselsandbits/lang/en_US.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_US.lang
@@ -45,10 +45,15 @@ mod.chiselsandbits.chiselmode.snap8=Grid Snapped 1/2 Size Cube
 mod.chiselsandbits.chiselmode.line=Line
 mod.chiselsandbits.chiselmode.plane=Plane
 mod.chiselsandbits.chiselmode.connected_plane=Connected Plane
+mod.chiselsandbits.chiselmode.connected_material=Connected Material
 mod.chiselsandbits.chiselmode.cube_small=Small Cube
 mod.chiselsandbits.chiselmode.cube_medium=Medium Cube
 mod.chiselsandbits.chiselmode.cube_large=Large Cube
 mod.chiselsandbits.chiselmode.drawn_region=Drawn Region
+mod.chiselsandbits.chiselmode.same_material=Same Material
+
+mod.chiselsandbits.bitoption.place=Place
+mod.chiselsandbits.bitoption.replace=Replace
 
 mod.chiselsandbits.positivepatternmode.replace=Replace
 mod.chiselsandbits.positivepatternmode.additive=Additive
@@ -158,6 +163,8 @@ mod.chiselsandbits.config.showUsage=Add help text to item descriptions
 mod.chiselsandbits.config.invertBitBagFullness=Invert damage bar on bit-bag.
 mod.chiselsandbits.config.enableChiselMode_Plane=Enable Mode - Plane
 mod.chiselsandbits.config.enableChiselMode_ConnectedPlane=Enable Mode - Connected Plane
+mod.chiselsandbits.config.enableChiselMode_ConnectedMaterial=Enable Mode - Connected Material
+mod.chiselsandbits.config.enableChiselMode_SameMaterial=Enable Mode - Same Material
 mod.chiselsandbits.config.enableChiselMode_Line=Enable Mode - Line
 mod.chiselsandbits.config.enableChiselMode_SmallCube=Enable Mode - Small Cube
 mod.chiselsandbits.config.enableChiselMode_LargeCube=Enable Mode - Large Cube
@@ -234,3 +241,7 @@ mod.chiselsandbits.config.useVBO=Use VBOs
 mod.chiselsandbits.config.defaultToDynamicRenderer.tooltip=By default C&B uses the static renderer, and changes to the Dynamic Renderer on update, This setting reverse that; After determining the detail of the model it will decide to revert to the static renderer, helpful for more complicated scenes that cause stalls when using the static renderer.
 mod.chiselsandbits.config.forceDynamicRenderer.tooltip=Debug Setting, that disable the static render entirely.
 mod.chiselsandbits.config.useVBO.tooltip=By Default uses the same setting as MC, but can be overridden.
+mod.chiselsandbits.config.replaceingBits=Replace Bits
+mod.chiselsandbits.config.replaceingBits.tooltip=Can be Toggled on Bit Radial Menu.
+mod.chiselsandbits.config.radialMenuVolume='Click' volume for radial menu.
+mod.chiselsandbits.config.radialMenuVolume.tooltip=Setting to Zero will disable it.
