--- a/src/main/resources/assets/chiselsandbits/lang/en_us.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.lang
@@ -83,18 +83,17 @@ mod.chiselsandbits.help.shiftdetails=<Hold Shift For Details>
 mod.chiselsandbits.help.empty=Empty
 mod.chiselsandbits.help.filled=Filled
 
-mod.chiselsandbits.help.chiseled_block=Left-click to place;Sneak to ignore block grid;Mouse Wheel to cycle placement rotation.
+mod.chiselsandbits.help.chiseled_block={} to place;{} to ignore block grid;Mouse Wheel to cycle placement rotation.
 mod.chiselsandbits.help.bit_bag=Automatically re-stock, and store bits.
-mod.chiselsandbits.help.wrench=Right-click blocks to rotate.
-mod.chiselsandbits.help.bit=Left-click to chisel;Right-click to place;Use {} to display menu.
-mod.chiselsandbits.help.positiveprint=Right-click to write;Right-click to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation;Use {} to display menu.
-mod.chiselsandbits.help.negativeprint=Right-click to write;Right-click to chisel.;Mouse Wheel to cycle rotation.
-mod.chiselsandbits.help.mirrorprint=Right-click the face you wish to mirror from;Craft with positive/negative design to transfer.
-mod.chiselsandbits.help.chisel=Left-click to chisel;Use {} to display menu.
+mod.chiselsandbits.help.wrench={} blocks to rotate.
+mod.chiselsandbits.help.bit={} to chisel;{} to place;Use {} to display menu.
+mod.chiselsandbits.help.positiveprint={} to write;{} to chisel/place or Craft with bits/bags.;Mouse Wheel to cycle rotation;Use {} to display menu.
+mod.chiselsandbits.help.negativeprint={} to write;{} to chisel.;Mouse Wheel to cycle rotation.
+mod.chiselsandbits.help.mirrorprint={} the face you wish to mirror from;Craft with positive/negative design to transfer.
+mod.chiselsandbits.help.chisel={} to chisel;Use {} to display menu.
 mod.chiselsandbits.help.bitsaw=Craft with Blocks or Chiseled blocks;Cut along any of the 3 axis.
-mod.chiselsandbits.help.bittank=Fill with fluid and ex
-tract bits.
-mod.chiselsandbits.help.tape_measure=Right-click and drag to measure;Sneak + right click to clear;Use {} to display menu.
+mod.chiselsandbits.help.bittank=Fill with fluid and extract bits.
+mod.chiselsandbits.help.tape_measure={} and drag to measure;{} + {} to clear;Use {} to display menu.
 
 mod.chiselsandbits.help.chiseled_block.long=Left-click to place the block. Sneak while placing to ignore block grid. Shift + Mouse Wheel to cycle placement rotation.
 mod.chiselsandbits.help.bit_bag.long=Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.
@@ -108,6 +107,9 @@ mod.chiselsandbits.help.chisel.long=Left-click any compatible block to chisel. R
 mod.chiselsandbits.help.bitsaw.long=Craft this saw with supported blocks, or symmetrical chiseled blocks to cut them in half. The axis of cutting is determined by the position of the saw related the block, cut along the X axis with the saw to the side, along the Y axis if the saw is above or below, and Z is if the saw is diagonal.
 mod.chiselsandbits.help.bittank.long=Right-click with a bucket to insert/remove fluid. Right-click without a bucket to extract bits from a filled tank, shift+right click inserts bits in your hand, inserting with an empty hand will attempt to insert as many bits as possible. You can use automation such as hoppers to extract bits from a tank with fluid in it.
 
+mod.chiselsandbits.help.nobind=No Key Bind
+mod.chiselsandbits.help.leftshift=Left Shift
+mod.chiselsandbits.help.rightshift=Right Shift
 mod.chiselsandbits.help.leftalt=Left Alt
 mod.chiselsandbits.help.rightalt=Right Alt
 mod.chiselsandbits.help.trash=Delete Bag Contents, Hold Item to filter.
