Change error reporting to be much more versatile and its now based on ActingPlayer instead of UndoTracker errors, now note lack of chisel, which bit types are missing, even if there are multiple types, and lack of bag space for auto chisel. More interactions now report errors, such as patterns, and tool usage. Auto Chiseling Blocks now reports error if your short on bag space. Fixed a crash when using negative pattern. ( sharing related? )

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.lang
@@ -77,6 +77,7 @@ mod.chiselsandbits.tapemeasure.block=Block
 mod.chiselsandbits.tapemeasure.distance=Distance
 
 mod.chiselsandbits.result.out_of_range=Not close enough
+mod.chiselsandbits.result.no_bag_space=No Bag Space to Chisel Block
 mod.chiselsandbits.result.has_changed=Block has changed
 mod.chiselsandbits.result.missing_chisels=Not enough chisels.
 mod.chiselsandbits.result.missing_bits=Not enough {}
