Finish PNG Parser, and import saved png files. Remove ImageClipboard output option, java sucks. Massive localization and message changes.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.lang
@@ -182,7 +182,7 @@ commands.setbit.spaceOccupied=Bit cannot be placed space is occupied
 mod.chiselsandbits.help.share.start=Blueprint Generation Starting
 mod.chiselsandbits.help.share.complete=Blueprint Generation Complete
 mod.chiselsandbits.help.share.clipboard=The data has been copied to your clipboard.
-mod.chiselsandbits.help.share.file=The file has been saved successfully.
+mod.chiselsandbits.help.share.file=Saved blueprint as {}
 mod.chiselsandbits.help.share.nofile=Unable to load selected file.
 mod.chiselsandbits.help.share.invaliddata=File was invalid and could not be loaded.
 mod.chiselsandbits.help.share.badurl=Unable to download file at the provided url.
@@ -270,7 +270,8 @@ mod.chiselsandbits.config.enableSetBitCommand=Enable /setbit Command
 mod.chiselsandbits.config.maxMillisecondsPerBlock=Max Milliseconds Per Block
 mod.chiselsandbits.config.maxMillisecondsUploadingPerFrame=Max Milliseconds Uploading/Cycle
 mod.chiselsandbits.config.maxTapeMeasures=Max Tape Measures
-mod.chiselsandbits.config.blueprintHosts=Hosts that C&B can download blueprints from, add "http://" and "https://" for any, not recommended.
+mod.chiselsandbits.config.blueprintHosts=Whitelist URLs
+mod.chiselsandbits.config.blueprintHosts.tooltip=Hosts that C&B can download blueprints from, add "http://" and "https://" for any, not recommended.
 mod.chiselsandbits.config.displayMeasuringTapeInChat=Display Measuring Tape In Chat
 mod.chiselsandbits.config.displayMeasuringTapeInChat=Display Measuring Tape In Chat
 mod.chiselsandbits.config.defaultToDynamicRenderer=Default To Dynamic Renderer
