--- a/src/main/resources/assets/chiselsandbits/lang/en_us.lang
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.lang
@@ -102,7 +102,7 @@ mod.chiselsandbits.help.bittank=Fill with fluid and extract bits.
 mod.chiselsandbits.help.tape_measure={} and drag to measure;{} + {} to clear;Use {} to display menu.
 
 mod.chiselsandbits.help.chiseled_block.long=Left-click to place the block. Sneak while placing to ignore block grid. Shift + Mouse Wheel to cycle placement rotation.
-mod.chiselsandbits.help.bit_bag.long=Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.
+mod.chiselsandbits.help.bit_bag.long=Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.\n\nCraft with any dye to color.
 mod.chiselsandbits.help.wrench.long=Right-click blocks to rotate them around the axis of the face you click.
 mod.chiselsandbits.help.tape_measure.long=Left-click to and drag to measure spaces. Sneak Use to remove previously created measurements. Use the menu to switch between measurement modes.
 mod.chiselsandbits.help.bit.long=Left-click to chisel the highlighted area. Right-click to place at the designated area.
@@ -144,7 +144,7 @@ chiselsandbits.color.yellow=Yellow
 chiselsandbits.color.lime=Lime
 chiselsandbits.color.pink=Pink
 chiselsandbits.color.gray=Gray
-chiselsandbits.color.silver=Silver
+chiselsandbits.color.silver=Light Gray
 chiselsandbits.color.cyan=Cyan
 chiselsandbits.color.purple=Purple
 chiselsandbits.color.blue=Blue
