Multi-tiered item tool menu working.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -48,17 +48,24 @@
   "item.chiselsandbits.magnifying_glass": "Magnifying Glass",
 
   "mod.chiselsandbits.chiselmode.mode": "Chisel Mode: %s",
+  "mod.chiselsandbits.chiselmode.mode_grouped": "Chisel Mode: %1$s (%2$s)",
   "mod.chiselsandbits.chiselmode.single": "Single Bit",
-  "mod.chiselsandbits.chiselmode.snap2": "Grid Snapped 1/8 Size Cube",
-  "mod.chiselsandbits.chiselmode.snap4": "Grid Snapped 1/4 Size Cube",
-  "mod.chiselsandbits.chiselmode.snap8": "Grid Snapped 1/2 Size Cube",
+  "mod.chiselsandbits.chiselmode.snap": "Grid Snapped Cube",
+  "mod.chiselsandbits.chiselmode.snap2": "1/8",
+  "mod.chiselsandbits.chiselmode.snap4": "1/4",
+  "mod.chiselsandbits.chiselmode.snap8": "1/2",
   "mod.chiselsandbits.chiselmode.line": "Line",
+  "mod.chiselsandbits.chiselmode.line1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.line2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.line4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.line8": "8 x 8",
   "mod.chiselsandbits.chiselmode.plane": "Plane",
   "mod.chiselsandbits.chiselmode.connected_plane": "Connected Plane",
   "mod.chiselsandbits.chiselmode.connected_material": "Connected Material",
-  "mod.chiselsandbits.chiselmode.cube_small": "Small Cube",
-  "mod.chiselsandbits.chiselmode.cube_medium": "Medium Cube",
-  "mod.chiselsandbits.chiselmode.cube_large": "Large Cube",
+  "mod.chiselsandbits.chiselmode.cubed": "Cube",
+  "mod.chiselsandbits.chiselmode.cube_small": "Small",
+  "mod.chiselsandbits.chiselmode.cube_medium": "Medium",
+  "mod.chiselsandbits.chiselmode.cube_large": "Large",
   "mod.chiselsandbits.chiselmode.drawn_region": "Drawn Region",
   "mod.chiselsandbits.chiselmode.same_material": "Same Material",
 
