Add support for a much more improved voxelshape and AABB calculation routine.
Compresses AABB down before pushing them into a VoxelShape.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -60,6 +60,10 @@
   "mod.chiselsandbits.chiselmode.line4": "4 x 4",
   "mod.chiselsandbits.chiselmode.line8": "8 x 8",
   "mod.chiselsandbits.chiselmode.plane": "Plane",
+  "mod.chiselsandbits.chiselmode.plane1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.plane2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.plane4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.plane8": "8 x 8",
   "mod.chiselsandbits.chiselmode.connected_plane": "Connected Plane",
   "mod.chiselsandbits.chiselmode.connected_material": "Connected Material",
   "mod.chiselsandbits.chiselmode.cubed": "Cube",
